[gd_scene load_steps=37 format=2]

[ext_resource path="res://Font/Roboto-Light.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scenes/Life.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Coin/BIG_0003_Capa-4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Coin/BIG_0002_Capa-3.png" type="Texture" id=4]
[ext_resource path="res://Assets/Coin/BIG_0007_Capa-8.png" type="Texture" id=5]
[ext_resource path="res://Assets/Coin/BIG_0001_Capa-2.png" type="Texture" id=6]
[ext_resource path="res://Assets/Coin/BIG_0006_Capa-7.png" type="Texture" id=7]
[ext_resource path="res://Assets/Coin/BIG_0004_Capa-5.png" type="Texture" id=8]
[ext_resource path="res://Assets/Coin/BIG_0000_Capa-1.png" type="Texture" id=9]
[ext_resource path="res://Assets/Coin/BIG_0005_Capa-6.png" type="Texture" id=10]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=11]
[ext_resource path="res://Scripts/Pause.gd" type="Script" id=12]
[ext_resource path="res://Assets/Basket/basketwithapples.png" type="Texture" id=13]
[ext_resource path="res://Assets/buttonicon/Pause_512.png" type="Texture" id=14]
[ext_resource path="res://Scenes/ScreenShake.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scripts/Revive.gd" type="Script" id=16]
[ext_resource path="res://Assets/Progress/Progress.png" type="Texture" id=17]
[ext_resource path="res://Scenes/Cloud Spawner.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/SpriteContainer.tscn" type="PackedScene" id=19]
[ext_resource path="res://Assets/buttonicon/g1783.png" type="Texture" id=20]
[ext_resource path="res://Assets/buttonicon/Play_512.png" type="Texture" id=21]
[ext_resource path="res://Assets/buttonicon/Menu_512.png" type="Texture" id=22]
[ext_resource path="res://Assets/buttonicon/Setting_512.png" type="Texture" id=23]
[ext_resource path="res://Assets/Background/rect1047.png" type="Texture" id=24]
[ext_resource path="res://Assets/Background/g1045.png" type="Texture" id=25]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 9 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 10
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 5, 145 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 72, 25 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 25, 10 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 22, 5.23412 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=9]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
font_data = ExtResource( 1 )

[node name="Game" type="Node2D"]
position = Vector2( -5, 0 )
script = ExtResource( 11 )
nextspawn = 60

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -72, -15 )
scale = Vector2( 0.045, 0.045 )
z_index = -100
texture = ExtResource( 25 )
centered = false

[node name="UI" type="CanvasLayer" parent="."]
layer = 10

[node name="Life" parent="UI" instance=ExtResource( 2 )]
position = Vector2( -5, 0 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="UI"]
position = Vector2( 100, 25 )
scale = Vector2( 0.15, 0.15 )
frames = SubResource( 1 )
frame = 1
playing = true

[node name="Score Label" type="Label" parent="UI"]
margin_left = 80.0
margin_top = 3.0
margin_right = 109.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Score: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="UI"]
margin_left = 110.0
margin_top = 3.0
margin_right = 110.0
margin_bottom = 17.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="UI"]
margin_left = 110.0
margin_top = 19.0
margin_right = 110.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="TextureButton" parent="UI"]
margin_left = 60.0
margin_top = 226.0
margin_right = 572.0
margin_bottom = 738.0
rect_scale = Vector2( 0.05, 0.05 )
texture_normal = ExtResource( 14 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpriteContainer" parent="." instance=ExtResource( 19 )]
layer = 3

[node name="WallLeft" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallLeft"]
position = Vector2( 0, 128 )
shape = SubResource( 4 )

[node name="WallRight" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WallRight"]
position = Vector2( 154, 128 )
shape = SubResource( 4 )

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 77, 251 )
shape = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Ground"]
position = Vector2( -148, 226 )
scale = Vector2( 3.26389, 3.66 )
texture = ExtResource( 24 )
centered = false

[node name="basketcol2" type="StaticBody2D" parent="."]
position = Vector2( 31, 210 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="basketcol2"]
shape = SubResource( 6 )

[node name="Basket" type="KinematicBody2D" parent="."]
position = Vector2( 31, 210 )

[node name="Sprite" type="Sprite" parent="Basket"]
scale = Vector2( 0.03, 0.03 )
texture = ExtResource( 13 )

[node name="Basketcol" type="CollisionShape2D" parent="Basket"]
position = Vector2( 0, -11 )
shape = SubResource( 7 )

[node name="Pause" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="Pause"]
pause_mode = 2
visible = false
margin_right = 144.0
margin_bottom = 256.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Pause/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resume" type="TextureButton" parent="Pause/Control"]
margin_left = 50.0
margin_top = 70.0
margin_right = 562.0
margin_bottom = 582.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 21 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="TextureButton" parent="Pause/Control"]
margin_left = 50.0
margin_top = 120.5
margin_right = 562.0
margin_bottom = 632.5
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 22 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="TextureButton" parent="Pause/Control"]
margin_left = 50.0
margin_top = 175.0
margin_right = 562.0
margin_bottom = 687.0
rect_scale = Vector2( 0.1, 0.1 )
texture_normal = ExtResource( 23 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Revive" type="CanvasLayer" parent="."]
layer = 3

[node name="Control" type="Control" parent="Revive"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Revive/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.588235 )

[node name="CenterContainer" type="CenterContainer" parent="Revive/Control"]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 54.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Revive/Control/CenterContainer"]
margin_left = 46.0
margin_top = 7.0
margin_right = 97.0
margin_bottom = 26.0

[node name="text" type="Label" parent="Revive/Control/CenterContainer/HBoxContainer"]
margin_right = 47.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 8 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Coins: "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coins" type="Label" parent="Revive/Control/CenterContainer/HBoxContainer"]
margin_left = 51.0
margin_right = 51.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 9 )

[node name="Button" type="TextureButton" parent="Revive/Control"]
margin_left = 44.5
margin_top = 180.0
margin_right = 99.5
margin_bottom = 195.0
texture_normal = ExtResource( 20 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="Revive/Control"]
margin_left = 120.0
margin_right = 142.0
margin_bottom = 25.0
focus_mode = 0
custom_fonts/font = SubResource( 10 )
enabled_focus_mode = 0
text = "X"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer2" type="CenterContainer" parent="Revive/Control"]
margin_top = 155.0
margin_right = 144.0
margin_bottom = 175.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Revive/Control/CenterContainer2"]
margin_left = 72.0
margin_right = 72.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 11 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="Revive/Control"]
margin_left = 20.0
margin_top = 50.0
margin_right = 532.0
margin_bottom = 562.0
rect_scale = Vector2( 0.2, 0.2 )
texture_under = ExtResource( 17 )
texture_progress = ExtResource( 17 )
fill_mode = 4
tint_progress = Color( 0.839216, 0.0470588, 0.0470588, 1 )

[node name="CloudSpawner" parent="." instance=ExtResource( 18 )]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 77, 128 )
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 15 )]
[connection signal="pressed" from="UI/Button" to="Pause/Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Pause/Control/Resume" to="Pause/Control" method="_on_Resume_pressed"]
[connection signal="pressed" from="Pause/Control/Menu" to="Pause/Control" method="_on_Menu_pressed"]
[connection signal="pressed" from="Pause/Control/Settings" to="Pause/Control" method="_on_Settings_pressed"]
[connection signal="pressed" from="Revive/Control/Button" to="Revive/Control" method="_on_Button_pressed"]
[connection signal="pressed" from="Revive/Control/Button2" to="Revive/Control" method="_on_Button2_pressed"]
